[gd_scene load_steps=2 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="WeatherContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="WeatherLabel" type="Label" parent="Panel/VBoxContainer/WeatherContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Weather"

[node name="WeatherOption" type="OptionButton" parent="Panel/VBoxContainer/WeatherContainer"]
layout_mode = 2

[node name="IntensitySlider" type="HSlider" parent="Panel/VBoxContainer/WeatherContainer"]
layout_mode = 2

[node name="IntensityLabel" type="Label" parent="Panel/VBoxContainer/WeatherContainer"]
layout_mode = 2
text = "Intensity: 50%"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimeContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/TimeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Time: 12:00"

[node name="TimeSlider" type="HSlider" parent="Panel/VBoxContainer/TimeContainer"]
layout_mode = 2

[node name="CycleEnabledCheck" type="CheckBox" parent="Panel/VBoxContainer/TimeContainer"]
layout_mode = 2
text = "Enable Day/Night Cycle"
button_pressed = true

[node name="CycleSpeedSlider" type="HSlider" parent="Panel/VBoxContainer/TimeContainer"]
layout_mode = 2

[node name="CycleSpeedLabel" type="Label" parent="Panel/VBoxContainer/TimeContainer"]
layout_mode = 2
text = "Speed: 60.0x"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close (ESC/M)"
